--- a/reactfrontend/package.json
+++ b/reactfrontend/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-overlays": "^0.8.0",
     "react-scripts": "1.0.11"
   },
   "scripts": {
